# rag-document-qa

./: .env.example  .gitattributes  .gitignore  pyproject.toml  requirements.txt
src/ingestion/: chunker.py  enrich.py  loader.py
src/retrieval/: vector_store.py
